# olpc-switch-desktop

./: .gitignore  Makefile  Makefile.am  README  autogen.sh  configure.ac  olpc-switch-desktop.spec
gnome/: Makefile.am  olpc-switch-to-sugar  olpc-switch-to-sugar.desktop  olpc-switch-to-sugar.desktop.in
po/: LINGUAS  Makefile  Makefile.am  POTFILES.in  bn.po  de.po  el.po  es.po  hr.po  ja.po  olpc-switch-desktop.pot  ps.po  pt.po  si.po  sq.po
sugar/: Makefile.am  __init__.py  model.py  view.py
